[package]
name = "stylus-counter"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = "=0.7.6"
stylus-sdk = { version = "0.6.0" }

[dev-dependencies]
motsu = "0.1.0-rc"
e2e = { git = "https://github.com/TucksonDev/e2e-lib.git" }
alloy-primitives = "=0.7.6"


[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = true
debug = false
rpath = false
debug-assertions = false
incremental = false

[workspace]
